More updates and add hu to language switcher

--- a/backend/lang/hu.json
+++ b/backend/lang/hu.json
@@ -74,7 +74,7 @@
     "Your order has been cancelled": "Megrendelését töröltük",
     "Your order wasn\\'t successful": "Megrendelése sikertelen volt",
     "You\\'ve received a refund": "Visszatérítést kapott",
-    "Your Order is Confirmed!": "Megrendelését megerősítettük!",
+    "Your Order is Confirmed!": "Sikeres jegyvásárlás!",
     "We were unable to process your order": "Nem tudtuk feldolgozni a megrendelését",
     "New order for :amount for :event 🎉": "Új megrendelés :amount összegben a következőre: :event 🎉.",
     "New order for :event 🎉": "Új megrendelés a következőre: :event 🎉",
