--- a/frontend/src/locales/hu.po
+++ b/frontend/src/locales/hu.po
@@ -1778,7 +1778,7 @@ msgstr "Beállítás folytatása"
 
 #: src/components/routes/product-widget/SelectProducts/index.tsx:375
 msgid "Continue to Checkout"
-msgstr "Folytatás a fizetéshez"
+msgstr "Folytatás"
 
 #: src/components/forms/OrganizerForm/index.tsx:121
 msgid "Continue to event creation"
@@ -1790,7 +1790,7 @@ msgstr "Folytatás a következő lépésre"
 
 #: src/components/routes/product-widget/CollectInformation/index.tsx:380
 #~ msgid "Continue To Payment"
-#~ msgstr "Folytatás a fizetéshez"
+#~ msgstr "Folytatás"
 
 #: src/components/common/AttendeeTicket/index.tsx:91
 #: src/components/common/CopyButton/index.tsx:13
@@ -3349,7 +3349,7 @@ msgstr "Bruttó értékesítés"
 
 #: src/components/routes/product-widget/OrderSummaryAndProducts/index.tsx:281
 msgid "Guests"
-msgstr "Vendégek"
+msgstr "Résztvevők"
 
 #: src/components/routes/product-widget/SelectProducts/index.tsx:542
 msgid "Have a promo code?"
@@ -4751,7 +4751,7 @@ msgstr "Megrendelési kérdések"
 
 #: src/components/routes/product-widget/OrderSummaryAndProducts/index.tsx:112
 msgid "Order Reference"
-msgstr "Megrendelés hivatkozás"
+msgstr "Rendelésszám"
 
 #: src/components/forms/WebhookForm/index.tsx:70
 msgid "Order Refunded"
@@ -8241,7 +8241,7 @@ msgstr "Legalább egy termékre szüksége lesz a kezdéshez. Ingyenes, fizetős
 
 #: src/components/routes/product-widget/OrderSummaryAndProducts/index.tsx:93
 msgid "You're going to {0}! 🎉"
-msgstr "Ön {0}! 🎉"
+msgstr "Sikeres jegyvásárlás a {0} előadásra! 🎉"
 
 #: src/components/routes/account/ManageAccount/sections/AccountSettings/index.tsx:72
 #~ msgid "Your account email in outgoing emails."
