Add initial services and components

--- a/frontend/src/locales/en.po
+++ b/frontend/src/locales/en.po
@@ -8400,3 +8400,154 @@ msgstr "ZIP or Postal Code"
 #: src/components/routes/event/Settings/Sections/LocationSettings/index.tsx:92
 #~ msgid "Zoom link, Google Meet link, etc."
 #~ msgstr "Zoom link, Google Meet link, etc."
+
+# Email Template translations
+msgid "Email Templates"
+msgstr "Email Templates"
+
+msgid "Customize Email Templates"
+msgstr "Customize Email Templates"
+
+msgid "Order Confirmation"
+msgstr "Order Confirmation"
+
+msgid "Attendee Ticket"
+msgstr "Attendee Ticket"
+
+msgid "Available Tokens"
+msgstr "Available Tokens"
+
+msgid "Conditional Blocks"
+msgstr "Conditional Blocks"
+
+msgid "Preview Template"
+msgstr "Preview Template"
+
+msgid "Reset to Default"
+msgstr "Reset to Default"
+
+msgid "Override Organizer Template"
+msgstr "Override Organizer Template"
+
+msgid "Using Organizer Template"
+msgstr "Using Organizer Template"
+
+msgid "Insert Token"
+msgstr "Insert Token"
+
+msgid "Insert Liquid Token"
+msgstr "Insert Liquid Token"
+
+msgid "Template saved successfully"
+msgstr "Template saved successfully"
+
+msgid "Invalid template syntax"
+msgstr "Invalid template syntax"
+
+msgid "Loading tokens..."
+msgstr "Loading tokens..."
+
+msgid "Subject is required"
+msgstr "Subject is required"
+
+msgid "Body is required"
+msgstr "Body is required"
+
+msgid "CTA label is required"
+msgstr "CTA label is required"
+
+msgid "Edit {0} Template"
+msgstr "Edit {0} Template"
+
+msgid "Create {0} Template"
+msgstr "Create {0} Template"
+
+msgid "Customize your email template using Liquid templating"
+msgstr "Customize your email template using Liquid templating"
+
+msgid "Active"
+msgstr "Active"
+
+msgid "Save Template"
+msgstr "Save Template"
+
+msgid "Enter email subject..."
+msgstr "Enter email subject..."
+
+msgid "Editor"
+msgstr "Editor"
+
+msgid "Preview"
+msgstr "Preview"
+
+msgid "Email Body"
+msgstr "Email Body"
+
+msgid "Use Liquid templating syntax with dynamic tokens"
+msgstr "Use Liquid templating syntax with dynamic tokens"
+
+msgid "Email Preview"
+msgstr "Email Preview"
+
+msgid "Subject will appear here"
+msgstr "Subject will appear here"
+
+msgid "Enter a subject and body to see the preview"
+msgstr "Enter a subject and body to see the preview"
+
+msgid "This preview shows how your email will look with sample data. Actual emails will use real values."
+msgstr "This preview shows how your email will look with sample data. Actual emails will use real values."
+
+msgid "Add Call-to-Action Button"
+msgstr "Add Call-to-Action Button"
+
+msgid "Include a button in the email template"
+msgstr "Include a button in the email template"
+
+msgid "Button Label"
+msgstr "Button Label"
+
+msgid "View Order"
+msgstr "View Order"
+
+msgid "Button Link"
+msgstr "Button Link"
+
+msgid "Choose which URL the button should link to"
+msgstr "Choose which URL the button should link to"
+
+msgid "Order URL"
+msgstr "Order URL"
+
+msgid "Ticket URL"
+msgstr "Ticket URL"
+
+msgid "The button will use the selected token to generate the appropriate URL for each email."
+msgstr "The button will use the selected token to generate the appropriate URL for each email."
+
+msgid "Default template will be used"
+msgstr "Default template will be used"
+
+msgid "Custom template"
+msgstr "Custom template"
+
+msgid "Create Custom Template"
+msgstr "Create Custom Template"
+
+msgid "Edit Custom Template"
+msgstr "Edit Custom Template"
+
+msgid "Delete Template"
+msgstr "Delete Template"
+
+msgid "Are you sure you want to delete this template? This action cannot be undone and emails will fall back to the default template."
+msgstr "Are you sure you want to delete this template? This action cannot be undone and emails will fall back to the default template."
+
+msgid "Template deleted successfully"
+msgstr "Template deleted successfully"
+
+msgid "Failed to save template"
+msgstr "Failed to save template"
+
+msgid "Failed to delete template"
+msgstr "Failed to delete template"
