--- a/frontend/src/locales/it.po
+++ b/frontend/src/locales/it.po
@@ -102,8 +102,8 @@ msgid "<0>Capacity assignments let you manage capacity across tickets or an enti
 msgstr "<0>Le assegnazioni di capacità ti permettono di gestire la capacità tra biglietti o un intero evento. Ideale per eventi di più giorni, workshop e altro, dove il controllo delle presenze è cruciale.</0><1>Ad esempio, puoi associare un'assegnazione di capacità con i biglietti <2>Primo Giorno</2> e <3>Tutti i Giorni</3>. Una volta raggiunta la capacità, entrambi i biglietti smetteranno automaticamente di essere disponibili per la vendita.</1>"
 
 #: src/components/common/CheckInListList/index.tsx:49
-msgid "<0>Check-in lists help you manage event entry by day, area, or ticket type. You can link tickets to specific lists such as VIP zones or Day 1 passes and share a secure check-in link with staff. No account is required. Check-in works on mobile, desktop, or tablet, using a device camera or HID USB scanner.                                </0>"
-msgstr ""
+msgid "<0>Check-in lists help you manage event entry by day, area, or ticket type. You can link tickets to specific lists such as VIP zones or Day 1 passes and share a secure check-in link with staff. No account is required. Check-in works on mobile, desktop, or tablet, using a device camera or HID USB scanner.                                
+msgstr "<0>Le liste di check-in ti aiutano a gestire l'accesso all'evento in base al giorno, all'area o al tipo di biglietto. Puoi collegare i biglietti a liste specifiche, come le zone VIP o i pass per il primo giorno, e condividere un link di check-in sicuro con il personale. Non è richiesto alcun account. Il check-in funziona su dispositivi mobili, desktop o tablet, utilizzando la fotocamera del dispositivo o uno scanner USB HID."
 
 #: src/components/common/WidgetEditor/index.tsx:324
 msgid "<0>https://</0>your-website.com"
@@ -1079,7 +1079,7 @@ msgstr "Registrazione Eliminata"
 
 #: src/components/forms/CheckInListForm/index.tsx:35
 msgid "Check-In List"
-msgstr ""
+msgstr "Lista di check-in"
 
 #: src/components/modals/CheckInListSuccessModal/index.tsx:20
 msgid "Check-In List Created"
@@ -1117,7 +1117,7 @@ msgstr "URL di Registrazione copiato negli appunti"
 
 #: src/components/common/AttendeeDetails/index.tsx:47
 msgid "Check-Ins"
-msgstr ""
+msgstr "Check-in"
 
 #: src/components/forms/QuestionForm/index.tsx:114
 msgid "Checkbox options allow multiple selections"
@@ -2188,7 +2188,7 @@ msgstr "Editor"
 
 #: src/constants/eventCategories.ts:19
 msgid "Education"
-msgstr "Educazione"
+msgstr "Istruzione"
 
 #: src/components/forms/TaxAndFeeForm/index.tsx:74
 msgid "eg. 2.50 for $2.50"
