--- a/frontend/src/locales/it.po
+++ b/frontend/src/locales/it.po
@@ -8,7 +8,7 @@ msgstr ""
 "Language: it\n"
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2025-06-27 12:37+0100\n"
+"PO-Revision-Date: 2025-10-24 22:37+0200\n"
 "Last-Translator: Albano Battistella <albanobattistella@gmail.com>\n"
 "Language-Team: Italian\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
@@ -106,8 +106,8 @@ msgstr "<0>Le assegnazioni di capacità ti permettono di gestire la capacità tr
 #~ msgstr "<0>Le liste di check-in ti aiutano a gestire l'accesso all'evento in base al giorno, all'area o al tipo di biglietto. Puoi collegare i biglietti a liste specifiche, come le zone VIP o i pass per il primo giorno, e condividere un link di check-in sicuro con il personale. Non è richiesto alcun account. Il check-in funziona su dispositivi mobili, desktop o tablet, utilizzando la fotocamera del dispositivo o uno scanner USB HID."
 
 #: src/components/common/CheckInListList/index.tsx:49
-msgid "<0>Check-in lists help you manage event entry by day, area, or ticket type. You can link tickets to specific lists such as VIP zones or Day 1 passes and share a secure check-in link with staff. No account is required. Check-in works on mobile, desktop, or tablet, using a device camera or HID USB scanner.                                </0>"
-msgstr ""
+msgid "<0>Check-in lists help you manage event entry by day, area, or ticket type. You can link tickets to specific lists such as VIP zones or Day 1 passes and share a secure check-in link with staff. No account is required. Check-in works on mobile, desktop, or tablet, using a device camera or HID USB scanner."                           
+msgstr "<0>Le liste di check-in ti aiutano a gestire l'accesso all'evento per giorno, area o tipo di biglietto. Puoi collegare i biglietti a liste specifiche, come zone VIP o pass per il primo giorno, e condividere un link di check-in sicuro con il personale. Non è richiesto alcun account. Il check-in funziona su dispositivi mobili, desktop o tablet, utilizzando la fotocamera del dispositivo o uno scanner USB HID."
 
 #: src/components/common/WidgetEditor/index.tsx:324
 msgid "<0>https://</0>your-website.com"
@@ -161,7 +161,7 @@ msgstr "Via Roma 123"
 #: src/components/routes/event/TicketDesigner/TicketDesignerPrint.tsx:81
 #: src/components/routes/event/TicketDesigner/TicketPreview.tsx:89
 msgid "123 Sample Street"
-msgstr ""
+msgstr "123 Strada campione"
 
 #: src/components/common/WidgetEditor/index.tsx:226
 msgid "20"
@@ -3092,7 +3092,7 @@ msgstr "https://webhook-domain.com/webhook"
 
 #: src/components/common/LanguageSwitcher/index.tsx:14
 msgid "Hungarian"
-msgstr ""
+msgstr "Ungherese"
 
 #: src/components/routes/auth/AcceptInvitation/index.tsx:119
 msgid "I agree to the <0>terms and conditions</0>"
